--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,39 +8,79 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:name=".application.TutorApplication">
 
-        <!--MainActivity-->
+        <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchActivity" />
+        </activity>
+
+        <!-- SearchActivity -->
+        <activity
+            android:name=".SearchActivity"
+            android:label="@string/title_activity_search"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
+        <!-- CourseDetailActivity -->
+        <activity
+            android:name=".CourseDetailActivity"
+            android:label="@string/title_activity_course_detail"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
+        </activity>
+
+        <!-- OrderDetailActivity -->
+        <activity
+            android:name=".OrderDetailActivity"
+            android:label="@string/title_activity_order_detail"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
+        </activity>
+
+        <!-- SplashActivity -->
+        <activity
+            android:name=".SplashActivity"
+            android:label="@string/title_activity_splash"
             android:theme="@style/Theme.AppCompat.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchActivity"/>
         </activity>
 
-        <!--SearchActivity-->
+        <!-- LoginActivity -->
         <activity
-            android:name=".SearchActivity"
-            android:label="@string/title_activity_search"
-            android:launchMode="singleTop"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
-            </intent-filter>
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"/>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:launchMode="singleTask">
         </activity>
 
+        <!--RegisterActivity-->
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:launchMode="singleTask">
+        </activity>
     </application>
 
 </manifest>
